--- a/transactions/templates/transactions/sendmoney_email.html
+++ b/transactions/templates/transactions/sendmoney_email.html
@@ -1,6 +1,6 @@
 <h3>Hello {{user.first_name}} {{user.last_name}}</h3>
 
-<h2>Congratulations!! Send Money request successfull</h2>
+<h2>Congratulations!! Send Money request successfully</h2>
 <p>After transfer your total amount is {{user.account.balance}}</p>
 
 <p>Thanks for banking with us</p>
